--- a/index.html
+++ b/index.html
@@ -1,2 +1,33 @@
-// Conteúdo do arquivo index.html
-// Código do site ArenaFutebolBR
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ArenaFutebolBR</title>
+  <link rel="stylesheet" href="styles.css"> <!-- Se houver um arquivo CSS -->
+</head>
+<body>
+  <header>
+    <h1>Bem-vindo ao ArenaFutebolBR!</h1>
+  </header>
+  
+  <main>
+    <section>
+      <h2>Últimos Resultados</h2>
+      <div id="resultados">
+        <!-- Os resultados serão carregados aqui -->
+      </div>
+    </section>
+    <section>
+      <h2>Memórias Arena BR</h2>
+      <p>Veja histórias emocionantes do futebol!</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 ArenaFutebolBR. Todos os direitos reservados.</p>
+  </footer>
+
+  <script src="app.js"></script> <!-- Se houver scripts JavaScript -->
+</body>
+</html>
